--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>{jqi} - The almighty jq processor, wrapped in a GUI.</title>
+  <title>{jqi} - The almighty jq processor, wrapped in a graphical UI.</title>
   <link href="https://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
@@ -208,7 +208,7 @@ a {
         <span class="opacity-50">{</span>jqi<span class="opacity-50">}</span>
       </h1>
       <h2 class="slogan">
-        The almighty jq processor<br>wrapped in a GUI
+        The almighty jq processor<br>wrapped in a graphical UI
       </h2>
       <a class="button more" title="Learn more">Learn More</a>
       <a class="button" href="https://www.dropbox.com/s/cjcujamk1nzwmsa/jqi.dmg?dl=1" title="Download jqi for Mac">Download for Mac</a>
